# aimd

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  build-dmg.sh  build-windows.bat  go.mod  package.json  release.config.json
.claude/agents/: aimd-dev.md  aimd-qa.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: .env.example  extractor.html  index.html  package-lock.json  package.json  playwright.config.ts  settings.html  vite.config.ts
apps/desktop-tauri/: package-lock.json  package.json
apps/desktop-tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs  windows.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json  extractor.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/python/: docutour_litellm.py
apps/desktop/src-tauri/src/: assets.rs  dev_log.rs  dialogs.rs  documents.rs  docutour.rs  drafts.rs  dto.rs  external.rs  formatter.rs  git.rs  git_integration.rs  git_process.rs  git_tests.rs  importer.rs  lib.rs  macos_assoc.rs  main.rs  menu.rs  settings.rs  settings_tests.rs  updater.rs  updater_tests.rs  web_clip_image_proxy.rs  windows.rs  workspace.rs  workspace_tests.rs
apps/desktop/src-tauri/src/documents/: local_images.rs  path_utils.rs  pdf.rs  pdf_diagnostics.rs  remote_images.rs
apps/desktop/src-tauri/src/git/: repo.rs
apps/desktop/src-tauri/src/git_integration/: config.rs  support.rs  tests.rs
apps/desktop/src-tauri/src/importer/: images.rs
apps/desktop/src-tauri/src/llm/: dashscope.rs  gemini.rs  mod.rs
apps/desktop/src-tauri/src/prompts/: docutour_system.md  docutour_user.md  format_markdown_language_policy.md  format_markdown_system.md  web_clip_refine_language_policy.md  web_clip_refine_system.md
apps/desktop/src-tauri/src/web_clip_image_proxy/: validation.rs
apps/desktop/src-tauri/windows/: hooks.nsh  installer.nsi
apps/desktop/src-tauri/windows/installer/: postinstall.ps1  preuninstall.ps1
cmd/aimd/: args.go  main.go
crates/aimd-cli/: Cargo.toml
crates/aimd-cli/src/: cli.rs  commands.rs  doctor.rs  git.rs  main.rs  skill.rs  util.rs
crates/aimd-core/: Cargo.toml
crates/aimd-core/src/: asset_names.rs  canonical.rs  export.rs  git_diff.rs  git_merge.rs  health.rs  lib.rs  local_paths.rs  manifest.rs  pack.rs  reader.rs  rewrite.rs  rewrite_tests.rs  writer.rs
crates/aimd-core/tests/: git_native.rs  roundtrip_examples.rs
crates/aimd-mdx/: Cargo.toml
crates/aimd-render/: Cargo.toml
crates/aimd-render/src/: lib.rs
crates/aimd-render/tests/: roundtrip_render.rs
docs/: README.md  aimd_desktop_tauri_spec.md  aimd_mrd_v_0_1.md  beta-checklist.md  beta-smoke-test.md  current_stage.md  desktop-next-todo.md  dev-report.md  git-integration.md  packaging-macos-pkg.md  packaging-windows-installer.md  pdf-export-design.md  product-direction.md  product_expansion_and_diagnosis.md  qa-report.md  ux-product-audit.md  windows-desktop.md
docs/product/: aimd-tab-workflow-state-model.md  feature-backlog.md
docs/todo/: aimd-agent-skill-rebuild-goal.md  aimd-diff-source-preserving-editor-goal.md  aimd-metadata-title-and-agent-loop-efficiency-goal.md  app-updater-production-goal.md  css-architecture-production-goal.md  directory-management-goal.md  document-command-strip-consolidation-goal.md  editor-core-goal.md  editor-surface-sync-bugfix-goal.md  feature-backlog.md  high-end-visual-refactor-goal.md  live-editor-removal-markdown-edit-goal.md  updater-version-experience-production-goal.md  windows-cli-skill-installer-parity-goal.md  workflow-tabs-phase-1-open-documents-goal.md  workflow-tabs-phase-2-tab-session-state-goal.md  workflow-tabs-phase-3-document-inspector-goal.md  workflow-tabs-phase-4-navigation-language-cleanup-goal.md
examples/: agent-loop-ai-daily-update-2026-05-14.md  ai-daily-2026-04-30.aimd
examples/report/: report.aimd  report.md
internal/aimd/: reader.go  rewrite.go  rewrite_test.go  writer.go
internal/desktop/: desktop.go
internal/editor/: editor.go  server.go
internal/export/: html.go
internal/inspect/: inspect.go
internal/manifest/: manifest.go  mime.go
internal/mdx/: frontmatter.go  frontmatter_test.go  images.go  images_test.go  title.go
internal/pack/: pack.go
internal/preview/: preview.go  server.go
internal/render/: css.go  html.go
internal/seal/: seal.go  template.html
scripts/: build-macos-pkg.sh  build-windows-installer.cmd  build-windows-installer.ps1  check-no-warnings.mjs  gha-cache-inputs.mjs  install-mac.sh  release.mjs  run-todos-with-codex.mjs  sign-updater-artifact.mjs  smoke.sh  sync-version.mjs  uninstall-macos-pkg.sh  updater-manifest.mjs  updater-tools.mjs  version-tools.mjs
skill/: SKILL.md
(+349 files in other folders)
