[workspace]
resolver = "2"
members = [
    "crates/aimd-core",
    "crates/aimd-cli",
    "crates/aimd-mdx",
    "crates/aimd-render",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "1.0.7"
edition = "2021"
authors = ["AIMD"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
comrak = "0.28"
tempfile = "3"
thiserror = "1"
