[package]
name = "aimd-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
aimd-mdx = { path = "../aimd-mdx" }
aimd-render = { path = "../aimd-render" }
serde = { workspace = true }
serde_json = { workspace = true }
zip = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
