[package]
name = "aimd-render"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
aimd-mdx = { path = "../aimd-mdx" }
comrak = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
aimd-core = { path = "../aimd-core" }
tempfile = { workspace = true }
