[package]
name = "aimd-desktop"
version = "0.1.0"
description = "AIMD Desktop"
authors = ["AIMD"]
edition = "2021"

[lib]
name = "aimd_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

# Windows / Linux 没有 macOS 那种系统级"打开文件投递到已运行实例"的语义，
# 双击文件会起新进程；用 single-instance 插件把第二实例的 CLI args 转发给首实例，
# 由首实例统一走 OpenedWindows 去重。
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
