[package]
name = "aimd-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "AIMD Desktop"

[lib]
name = "aimd_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aimd-core = { path = "../../../crates/aimd-core" }
aimd-mdx = { path = "../../../crates/aimd-mdx" }
aimd-render = { path = "../../../crates/aimd-render" }
rfd = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
tauri = { version = "2", features = ["protocol-asset"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
